Fix Home section spacing

--- a/components/sections/HomeSection.module.scss
+++ b/components/sections/HomeSection.module.scss
@@ -1,10 +1,15 @@
 @use '@/styles/utils/colors';
 @use '@/components/sections/Section.module.scss';
 
+.section {
+  margin-bottom: 10rem;
+}
+
 .header {
   position: relative;
 
   padding: 10rem 8rem;
+  padding-bottom: 6rem;
 
   font-size: 4rem;
   font-weight: 400;
